# napari-readers

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg
src/napari_ultrasound_reader/: __init__.py  napari.yaml
src/napari_ultrasound_reader/ft_io/: reader_dicom_plugin.py  reader_hdf5_plugin.py  save_data.py
