[metadata]
name = napari-ultrasound-reader
author = Leopold Franz
author_email = leopold.franz@bsse.ethz.ch
url = https://github.com/leopold-franz/napari-ultrasound-reader
license = BSD-3-Clause
description = This repo contains a plugin to read dicom and h5/hdf5 images.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/leopold-franz/napari-ultrasound-reader/issues
    Documentation = https://github.com/leopold-franz/napari-ultrasound-reader#README.md
    Source Code = https://github.com/leopold-franz/napari-ultrasound-reader
    User Support = https://github.com/leopold-franz/napari-ultrasound-reader/issues

[options]
packages = find:
python_requires = >=3.8
package_dir =
    = src
setup_requires = 
    setuptools_scm
# add your package requirements here
install_requires =
    napari[all]
    numpy
    pandas
    tables
    matplotlib
    pydicom
    pyyaml
    h5py
   

[options.packages.find]
where = src/

[options.entry_points]
napari.manifest =
    napari-ultrasound-reader = napari_ultrasound_reader:napari.yaml

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = vendored|__init__.py|examples|setup.py
